# NetWagon

./: .gitignore  CMakeLists.txt  README.md  template.json
include/generator/: ip.h  packet.h  payload.h  pcap_writer.h  proto_icmp.h  proto_tcp.h  proto_udp.h  reader.h  txrx.h
include/injector/: packet_monitor.h  save_metrics.h  txrx.h
src/: latency_module.c  latency_module.h  main.c
src/generator/: generator.c  packet.c  payload.c  pcap_writer.c  proto_icmp.c  proto_tcp.c  proto_udp.c  reader.c
src/injector/: cli.h  exporter.c  exporter.h  injector.c  injector.h  interfaces.c  interfaces.h  rtt_measurement.c  save_metrics.c  stats.c  stats.h  txrx.c
